kyverno/policies/services/semaphore-service-mirror-length.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: mirror-name-length
  annotations:
    policies.kyverno.io/title: Ensure mirror name can fit Kubernetes Service Name
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Service
    policies.kyverno.io/description: >-
      Ensure that the semaphore-service-mirror controller will be able to
      generate the mirrored service names, respecting the char limit of 63 for
      service names.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["services"]
    objectSelector:
      matchLabels:
        uw.systems/mirror: "true"
  validations:
    # The prefixes we use based on our clusters configuration are:
    # - aws
    # - gcp
    # - merit
    # Since merit-<name> is the most expensive transformation we want this
    # rule to allow service names up to 63-6=57 chars long, in order to be
    # gracefully mirrored to all other clusters.
    # The mirrored service name will follow the pattern:
    # <prefix>-<namespace>-<separator>-<service-name>, where separator is
    # 73736d
    # value: 63 - 6 (merit-)
    - expression: "size(object.metadata.namespace + '-73736d-' + object.metadata.name) <= 57"
      message: "Mirror service controller should be able to generate 63 chars long mirrored names with prefixes [aws|gcp|merit] and pattern <prefix>-<namespace>-73736d-<service-name>"
