kyverno/policies/services/test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-external-ips
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: no-localhost-service
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-load-balancer-ip
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-nodeport
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - reason: Succeeded
        status: "True"
---
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: mirror-name-length
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
      - reason: Succeeded
        status: "True"
    (conditions[?type == 'WebhookConfigured']):
      - reason: Succeeded
        status: "True"
