kyverno/policies/services/test/test-externalIPs.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-externalIP-not-allowed
  labels:
    app: test-externalIP-not-allowed
  namespace: test
spec:
  type: LoadBalancer
  externalIPs:
  - 1.1.1.1
