kyverno/policies/services/test/test-externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-externalname-localhost-sys-ingress-certs
  namespace: sys-ingress-certs
spec:
  type: ExternalName
  externalName: localhost
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: test-externalname-ip-sys-ingress-certs
  namespace: sys-ingress-certs
spec:
  type: ExternalName
  externalName: 127.0.0.1
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: test-externalname-block
spec:
  type: ExternalName
  externalName: localhost
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: test-externalname-as-ip-block
spec:
  type: ExternalName
  externalName: 127.0.0.1
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
