kyverno/policies/services/test/test-loadbalancerIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-loadbalancerip-not-set
spec:
  type: LoadBalancer
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: test-loadbalancerip-not-allowed
spec:
  type: LoadBalancer
  loadBalancerIP: 1.1.1.1
  ports:
    - name: dummy
      port: 30000
      protocol: TCP
      targetPort: 30000
---
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: restrict-load-balancer-ip-exception
  namespace: kube-system
spec:
  exceptions:
    - policyName: restrict-load-balancer-ip
      ruleNames: ["*"]
  match:
    any:
      - resources:
          kinds:
            - Service
          namespaces:
            - default
          names:
            - test-loadbalancerip-exception-allowed
  conditions:
    all:
      - key: "{{ request.object.spec.loadBalancerIP }}"
        operator: AllIn
        value:
          - "10.1.2.3"
---
apiVersion: v1
kind: Service
metadata:
  name: test-loadbalancerip-exception-allowed
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 10.1.2.3
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
