kyverno/policies/services/test/test-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport-not-set
spec:
  type: ClusterIP
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport-not-allowed
spec:
  type: NodePort
  ports:
    - name: dummy
      nodePort: 30001
      port: 30001
      protocol: TCP
      targetPort: 30001
---
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: homer-heplify-server-restrict-nodeport
  namespace: kube-system
spec:
  policyRefs:
    - name: restrict-nodeport
      kind: ValidatingPolicy
  matchConditions:
    - name: allow-specific-nodeport
      expression: >-
        object.metadata.namespace == 'default' &&
        object.metadata.name == 'test-nodeport-exception-allowed' &&
        object.spec.ports.all(p, !has(p.nodePort) || p.nodePort == 30961)
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodeport-exception-allowed
  namespace: default
spec:
  type: NodePort
  ports:
    - name: udp
      nodePort: 30961
      port: 9060
      protocol: UDP
      targetPort: 9060
