kyverno/policies/services/test/test-semaphore-service-mirror-length.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-valid-length
  labels:
    uw.systems/mirror: "true"
spec:
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345

---
apiVersion: v1
kind: Service
metadata:
  name: test-very-very-very-very-very-very-very-very-long-name-svc # 59 chars
  labels:
    uw.systems/mirror: "true"
spec:
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: broadband-product-availability-app
  labels:
    uw.systems/mirror: "true"
spec:
  ports:
    - name: dummy
      port: 12345
      protocol: TCP
      targetPort: 12345
