kyverno/policies/services/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers
policies:
  - ../externalIPs.yaml
  - ../externalName.yaml
  - ../loadBalancerIP.yaml
  - ../nodePort.yaml
  - ../semaphore-service-mirror-length.yaml
resources:
  - test-externalIPs.yaml
  - test-externalName.yaml
  - test-loadbalancerIP.yaml
  - test-nodePort.yaml
  - test-semaphore-service-mirror-length.yaml
results:
  # Test services external IPs
  - policy: restrict-external-ips
    rule: default
    resources: ["test-externalIP-not-allowed"]
    kind: Service
    result: fail

  # Test services loadBalancerIP
  - policy: restrict-load-balancer-ip
    rule: default
    resources: ["test-loadBalancerIP-not-set"]
    kind: Service
    result: pass
  - policy: restrict-load-balancer-ip
    rule: default
    resources: ["test-loadBalancerIP-not-allowed"]
    kind: Service
    result: fail

  # Test services externalNames
  - policy: no-localhost-service
    rule: default
    resources: ["test-externalName-localhost-sys-ingress-certs"]
    kind: Service
    result: skip

  # Test NodePort Services
  - policy: restrict-nodeport
    rule: default
    resources: ["test-nodePort-not-set"]
    kind: Service
    result: pass
  - policy: restrict-nodeport
    rule: default
    resources: ["test-nodePort-not-allowed"]
    kind: Service
    result: fail

  # Test semaphore-service-mirror service name length
  - policy: mirror-name-length
    rule: default
    resources: ["test-valid-length"]
    kind: Service
    result: pass
  - policy: mirror-name-length
    rule: default
    resources:
      [
        "test-very-very-very-very-very-very-very-very-long-name-svc",
        "broadband-product-availability-app",
      ]
    kind: Service
    result: fail
